--- a/PhoneBook/PhoneBook/PhoneBook.csproj
+++ b/PhoneBook/PhoneBook/PhoneBook.csproj
@@ -17,7 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="default_icon.png" />
+    <Content Include="images\default_icon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
