--- a/PhoneBook/PhoneBook/PhoneBook.csproj
+++ b/PhoneBook/PhoneBook/PhoneBook.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <None Remove="default_icon.png" />
+    <None Remove="images\edit_icon.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,9 @@
 
   <ItemGroup>
     <Content Include="images\default_icon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="images\edit_icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
